--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,24 @@ header a:hover {
     color: #cccccc;
     font-weight: bold;
 }
+
+/*SHOWCASE*/
+
+#showcase {
+    min-height: 400px;
+    background: linear-gradient(rgba(53, 66, 74, 0.5), rgba(53, 66, 74, 0.7)), url('img/hero.jpg');
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #ffffff;
+}
+
+#showcase h1 {
+    margin-top: 100px;
+    margin-bottom: 10px;
+    font-size: 55px;
+}
+
+#showcase p {
+    font-size: 20px;
+}
