--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,3 +114,21 @@ header a:hover {
     height: 25px;
     width: 250px;
 }
+
+/*BOXES*/
+
+#boxes {
+    margin-top: 30px;
+}
+
+#boxes .box {
+    float: left;
+    width: 30%;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+#boxes .box img {
+    width: 90px;
+}
