--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,13 @@ body {
     color: #fff;
 }
 
+.dark {
+    background-color: #35424a;
+    color: #ffffff;
+    padding: 15px;
+    margin: 15px 0px;
+}
+
 /*HEADER*/
 
 header {
@@ -141,4 +148,22 @@ footer {
     color: #ffffff;
     background-color: #e8491d;
     text-align: center;
+}
+
+/*SIDEBAR*/
+
+aside#sidebar {
+    text-align: justify;
+    float: right;
+    width: 30%;
+    margin-top: 10px;
+}
+
+/*ARTICLE*/
+
+article#main-col {
+    text-align: justify;
+    float: left;
+    width: 65%;
+    margin-top: 10px;
 }
