--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,3 +167,19 @@ article#main-col {
     width: 65%;
     margin-top: 10px;
 }
+
+/*SERVICES*/
+
+ul#services li {
+    list-style: none;
+    padding: 20px;
+    border: #cccccc solid 1px;
+    margin-bottom: 5px;
+    background-color: #e6e6e6;
+}
+
+aside#sidebar .quote input, textarea{
+    width: 90%;
+    padding: 5px;
+    margin-bottom: 10px;
+}
