--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,3 +183,44 @@ aside#sidebar .quote input, textarea{
     padding: 5px;
     margin-bottom: 10px;
 }
+
+/*MEDIA QUERIES*/
+
+@media (max-width: 768px) {
+    header #branding,
+    header nav,
+    header li,
+    #newsletter h1,
+    #newsletter form,
+    #boxes .box,
+    article#main-col,
+    article#sidebar,
+    aside#sidebar {
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+
+    header {
+        padding-bottom: 30px;
+    }
+
+    #showcase h1 {
+        margin-top: 40px;
+    }
+
+    #newsletter button, .quote button {
+        display: block;
+        width: 100%;
+    }
+
+    #newsletter form input[type="email"], .quote input {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .quote textarea {
+        width: 90%;
+        margin-bottom: 10px;
+    }
+}
